--- a/ChallengePythonParaDataSciencie.ipynb
+++ b/ChallengePythonParaDataSciencie.ipynb
@@ -37,14 +37,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 310
         },
         "id": "T3EvaeQ_INIL",
-        "outputId": "770707da-cfc8-46ae-f897-4667ed4cf8f3"
+        "outputId": "62f6c48d-f053-4d7b-d957-1cf0a27cfc59"
       },
       "outputs": [
         {
@@ -74,7 +74,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-4441f71d-9052-4d9e-8c71-dd85b0b19820\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-50f0af66-c682-403e-b39a-5c7efa9c1b67\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -189,7 +189,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-4441f71d-9052-4d9e-8c71-dd85b0b19820')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-50f0af66-c682-403e-b39a-5c7efa9c1b67')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -241,12 +241,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-4441f71d-9052-4d9e-8c71-dd85b0b19820 button.colab-df-convert');\n",
+              "        document.querySelector('#df-50f0af66-c682-403e-b39a-5c7efa9c1b67 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-4441f71d-9052-4d9e-8c71-dd85b0b19820');\n",
+              "        const element = document.querySelector('#df-50f0af66-c682-403e-b39a-5c7efa9c1b67');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -266,8 +266,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-1f736b82-412e-427b-b2f2-3b561cd550f3\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-1f736b82-412e-427b-b2f2-3b561cd550f3')\"\n",
+              "    <div id=\"df-de2e3d39-50f4-4915-ba8c-2da5c2dd3e41\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-de2e3d39-50f4-4915-ba8c-2da5c2dd3e41')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -386,7 +386,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-1f736b82-412e-427b-b2f2-3b561cd550f3 button');\n",
+              "            document.querySelector('#df-de2e3d39-50f4-4915-ba8c-2da5c2dd3e41 button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
@@ -403,7 +403,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 4
+          "execution_count": 1
         }
       ],
       "source": [
@@ -472,9 +472,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "97a5743d-9da7-4e45-b1d6-3f92114c3524"
+        "outputId": "acd2d163-a1cb-47d6-c485-a9d3a9ca100c"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -518,9 +518,9 @@
           "height": 472
         },
         "id": "BeSBcE9QbiZX",
-        "outputId": "07bd79e9-08cd-4439-df7e-328c78c6397d"
+        "outputId": "3d5faa84-febb-4b2a-fddc-f40342254b40"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -575,9 +575,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "63145bdb-fd76-4e15-ebda-04300131d287"
+        "outputId": "313d08d0-feda-4899-f824-9b717d74f36f"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -663,9 +663,9 @@
           "height": 607
         },
         "id": "STWLCduyEYQS",
-        "outputId": "847e8346-0b7f-4150-b54e-aefbae8a771c"
+        "outputId": "167b9d76-19ac-4a33-95bf-6135136fa81b"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -728,9 +728,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "f83507b0-2752-4939-d5d6-b28a92228399"
+        "outputId": "711dfcae-1f62-413d-862a-d6a3c69eafee"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -778,9 +778,9 @@
           "height": 453
         },
         "id": "PpNFyn_2ol-9",
-        "outputId": "e0c51af1-e561-49bc-f975-5198c247f4fd"
+        "outputId": "0f714f84-3071-4928-daf7-67ab825dfc29"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -819,6 +819,146 @@
     {
       "cell_type": "code",
       "source": [
+        "# Se agrupan y calculan los productos más y menos vendidos de cada tienda\n",
+        "\n",
+        "productos_vendidos_tienda1 = tienda1.groupby('Producto')['Cantidad de cuotas'].sum().sort_values(ascending=False)\n",
+        "\n",
+        "productos_vendidos_tienda2 = tienda2.groupby('Producto')['Cantidad de cuotas'].sum().sort_values(ascending=False)\n",
+        "\n",
+        "productos_vendidos_tienda3 = tienda3.groupby('Producto')['Cantidad de cuotas'].sum().sort_values(ascending=False)\n",
+        "\n",
+        "productos_vendidos_tienda4 = tienda4.groupby('Producto')['Cantidad de cuotas'].sum().sort_values(ascending=False)# Se muestran los resultados de los productos más vendidos de cada tienda\n",
+        "\n",
+        "\n",
+        "# Se muestran los resultados de los productos más vendidos en cada tienda\n",
+        "\n",
+        "print(\"Productos más vendidos en Tienda 1:\")\n",
+        "\n",
+        "print(productos_vendidos_tienda1.head())\n",
+        "\n",
+        "print(\"\\nProductos más vendidos en Tienda 2:\")\n",
+        "\n",
+        "print(productos_vendidos_tienda2.head())\n",
+        "\n",
+        "print(\"\\nProductos más vendidos en Tienda 3:\")\n",
+        "\n",
+        "print(productos_vendidos_tienda3.head())\n",
+        "\n",
+        "print(\"\\nProductos más vendidos en Tienda 4:\")\n",
+        "\n",
+        "print(productos_vendidos_tienda4.head())\n",
+        "\n",
+        "\n",
+        "# Se muestran los resultados de los productos menos vendidos en cada tienda\n",
+        "\n",
+        "\n",
+        "print(\"Productos menos vendidos en Tienda 1:\")\n",
+        "\n",
+        "print(productos_vendidos_tienda1.tail())\n",
+        "\n",
+        "print(\"\\nProductos menos vendidos en Tienda 2:\")\n",
+        "\n",
+        "print(productos_vendidos_tienda2.tail())\n",
+        "\n",
+        "print(\"\\nProductos menos vendidos en Tienda 3:\")\n",
+        "\n",
+        "print(productos_vendidos_tienda3.tail())\n",
+        "\n",
+        "print(\"\\nProductos menos vendidos en Tienda 4:\")\n",
+        "\n",
+        "print(productos_vendidos_tienda4.tail())\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Q-8M1AwfgBo0",
+        "outputId": "b6b1577e-2315-476a-a76f-43eb406433da"
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Productos más vendidos en Tienda 1:\n",
+            "Producto\n",
+            "Secadora de ropa    214\n",
+            "TV LED UHD 4K       196\n",
+            "Mesa de noche       188\n",
+            "Impresora           182\n",
+            "Bicicleta           178\n",
+            "Name: Cantidad de cuotas, dtype: int64\n",
+            "\n",
+            "Productos más vendidos en Tienda 2:\n",
+            "Producto\n",
+            "Iniciando en programación    223\n",
+            "Iphone 15                    195\n",
+            "Guitarra acústica            183\n",
+            "Microondas                   179\n",
+            "Secadora de ropa             177\n",
+            "Name: Cantidad de cuotas, dtype: int64\n",
+            "\n",
+            "Productos más vendidos en Tienda 3:\n",
+            "Producto\n",
+            "Bicicleta             191\n",
+            "Estufa                182\n",
+            "Juego de mesa         181\n",
+            "Cuerda para saltar    176\n",
+            "Refrigerador          172\n",
+            "Name: Cantidad de cuotas, dtype: int64\n",
+            "\n",
+            "Productos más vendidos en Tienda 4:\n",
+            "Producto\n",
+            "Dashboards con Power BI    196\n",
+            "Cama box                   195\n",
+            "Cubertería                 183\n",
+            "Cama king                  175\n",
+            "Mesa de comedor            166\n",
+            "Name: Cantidad de cuotas, dtype: int64\n",
+            "Productos menos vendidos en Tienda 1:\n",
+            "Producto\n",
+            "Cuerda para saltar    100\n",
+            "Tablet ABXY            99\n",
+            "Dinosaurio Rex         94\n",
+            "Mochila                90\n",
+            "Celular ABXY           78\n",
+            "Name: Cantidad de cuotas, dtype: int64\n",
+            "\n",
+            "Productos menos vendidos en Tienda 2:\n",
+            "Producto\n",
+            "Sillón             100\n",
+            "Juego de mesa       99\n",
+            "Bicicleta           98\n",
+            "Set de vasos        98\n",
+            "Mesa de comedor     89\n",
+            "Name: Cantidad de cuotas, dtype: int64\n",
+            "\n",
+            "Productos menos vendidos en Tienda 3:\n",
+            "Producto\n",
+            "Vaso térmico          109\n",
+            "Microondas            106\n",
+            "Guitarra eléctrica    100\n",
+            "Smartwatch            100\n",
+            "TV LED UHD 4K          94\n",
+            "Name: Cantidad de cuotas, dtype: int64\n",
+            "\n",
+            "Productos menos vendidos en Tienda 4:\n",
+            "Producto\n",
+            "Guitarra acústica     104\n",
+            "Tablet ABXY           100\n",
+            "Guitarra eléctrica     97\n",
+            "Smartwatch             93\n",
+            "Armario                88\n",
+            "Name: Cantidad de cuotas, dtype: int64\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "import matplotlib.pyplot as plt\n",
         "\n",
         "def graficar_productos(productos, tienda_num, tipo):\n",
@@ -853,9 +993,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 1000
         },
-        "outputId": "dd36694a-7885-4bb6-ad13-597eb2831a57"
+        "outputId": "dc844e34-79b0-4be1-ccc2-8c826f9c5437"
       },
-      "execution_count": 23,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "display_data",
@@ -986,7 +1126,7 @@
         },
         "outputId": "65c33c56-a292-45aa-d4a6-010a8d6aea6a"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
